# leviathan

./: CMakeLists.txt  ENGINE_ROADMAP.md  STOCKFISH_STYLE_NOTES.md  STRATEGY.md  board.cpp  board.h  engine_components.h  eval.cpp  eval.h  main.cpp  movegen.cpp  movegen.h  search.cpp  search.h  tt.cpp  tt.h
